Fixed the bugs related to :     1. Non-TLS Broker not working     2. AWS Broker will connect, but without code modification PUB and SUB to support AWS topic and JSON payload will not work with Shadow things     3. TCP Server does not work properly     4. Non-Terminal mode not implemented     5. ATE0 Echo command not working     6. AT+GMR Not working     7. AT+DNSRESOLVE not working if second request is made

--- a/firmware/src/config/default/default.mhc/System_Configuration/TCP_IP_STACK/APPLICATION_LAYER/tcpipDhcp.yml
+++ b/firmware/src/config/default/default.mhc/System_Configuration/TCP_IP_STACK/APPLICATION_LAYER/tcpipDhcp.yml
@@ -4,6 +4,13 @@ attributes: {id: tcpipDhcp}
 children:
 - type: Symbols
   children:
+  - type: Boolean
+    attributes: {id: TCPIP_DHCP_CLIENT_CONSOLE_CMD}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: 'false'}
   - type: Integer
     attributes: {id: TCPIP_DHCP_HEAP_SIZE}
     children:
