--- a/firmware/src/config/default/default.mhc/sysNetPic32mzw1.yml
+++ b/firmware/src/config/default/default.mhc/sysNetPic32mzw1.yml
@@ -5,6 +5,13 @@ children:
 - type: Symbols
   children:
   - type: Boolean
+    attributes: {id: SYS_NET_ENABLE_CLICMD}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: 'false'}
+  - type: Boolean
     attributes: {id: SYS_NET_ENABLE_TLS}
     children:
     - type: Values
