--- a/firmware/src/config/default/default.mhc/System_Configuration/TCP_IP_STACK/APPLICATION_LAYER/tcpipDns.yml
+++ b/firmware/src/config/default/default.mhc/System_Configuration/TCP_IP_STACK/APPLICATION_LAYER/tcpipDns.yml
@@ -4,6 +4,13 @@ attributes: {id: tcpipDns}
 children:
 - type: Symbols
   children:
+  - type: Boolean
+    attributes: {id: TCPIP_DNS_CLIENT_CONSOLE_CMD}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: 'false'}
   - type: Integer
     attributes: {id: TCPIP_DNS_CLIENT_HEAP_SIZE}
     children:
