--- a/firmware/src/config/default/default.mhc/HarmonyCore.yml
+++ b/firmware/src/config/default/default.mhc/HarmonyCore.yml
@@ -49,10 +49,6 @@ children:
     children:
     - type: Attributes
       children:
-      - type: Boolean
-        attributes: {id: enabled}
-        children:
-        - {type: Value, value: 'true'}
       - type: String
         attributes: {id: name}
         children:
@@ -62,10 +58,6 @@ children:
     children:
     - type: Attributes
       children:
-      - type: Boolean
-        attributes: {id: enabled}
-        children:
-        - {type: Value, value: 'true'}
       - type: String
         attributes: {id: name}
         children:
@@ -75,10 +67,6 @@ children:
     children:
     - type: Attributes
       children:
-      - type: Boolean
-        attributes: {id: enabled}
-        children:
-        - {type: Value, value: 'true'}
       - type: String
         attributes: {id: name}
         children:
@@ -88,10 +76,6 @@ children:
     children:
     - type: Attributes
       children:
-      - type: Boolean
-        attributes: {id: enabled}
-        children:
-        - {type: Value, value: 'true'}
       - type: String
         attributes: {id: name}
         children:
@@ -133,13 +117,13 @@ children:
         - type: Pairs
           children:
           - type: Pair
-            attributes: {description: 'TRUE', value: '5', key: ENABLE_DRV_COMMON}
+            attributes: {description: 'TRUE', value: '1', key: ENABLE_DRV_COMMON}
           - type: Pair
-            attributes: {description: 'TRUE', value: '6', key: ENABLE_SYS_COMMON}
+            attributes: {description: 'TRUE', value: '2', key: ENABLE_SYS_COMMON}
           - type: Pair
-            attributes: {description: 'TRUE', value: '2', key: ENABLE_SYS_MEDIA}
+            attributes: {description: 'TRUE', value: '0', key: ENABLE_SYS_MEDIA}
           - type: Pair
-            attributes: {description: 'TRUE', value: '1', key: ENABLE_SYS_PORTS}
+            attributes: {description: 'TRUE', value: '0', key: ENABLE_SYS_PORTS}
           - type: Pair
             attributes: {description: 'FALSE', value: '0', key: ENABLE_SYS_DMA}
           - type: Pair
@@ -204,7 +188,7 @@ children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: HarmonyCore, value: 'true'}
+        attributes: {id: HarmonyCore, value: 'false'}
   - type: Boolean
     attributes: {id: ENABLE_SYS_COMMON}
     children:
@@ -228,29 +212,17 @@ children:
   - type: Boolean
     attributes: {id: ENABLE_SYS_MEDIA}
     children:
-    - type: Attributes
-      children:
-      - type: Boolean
-        attributes: {id: readOnly}
-        children:
-        - {type: Value, value: 'true'}
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: HarmonyCore, value: 'true'}
+        attributes: {id: HarmonyCore, value: 'false'}
   - type: Boolean
     attributes: {id: ENABLE_SYS_PORTS}
     children:
-    - type: Attributes
-      children:
-      - type: Boolean
-        attributes: {id: readOnly}
-        children:
-        - {type: Value, value: 'true'}
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: HarmonyCore, value: 'true'}
+        attributes: {id: HarmonyCore, value: 'false'}
   - type: Boolean
     attributes: {id: ENABLE_SYS_RESET}
     children:
@@ -486,12 +458,19 @@ children:
       - type: User
         attributes: {value: 'false'}
   - type: Boolean
+    attributes: {id: GEN_APP_TASK_ENABLE_2}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: 'false'}
+  - type: Boolean
     attributes: {id: GEN_APP_TASK_ENABLE_3}
     children:
     - type: Values
       children:
       - type: User
-        attributes: {value: 'true'}
+        attributes: {value: 'false'}
   - type: Menu
     attributes: {id: GEN_APP_TASK_MENU}
     children:
@@ -629,33 +608,6 @@ children:
         children:
         - {type: Value, value: 'true'}
   - type: File
-    attributes: {id: PORTS_DEF}
-    children:
-    - type: Attributes
-      children:
-      - type: Boolean
-        attributes: {id: enabled}
-        children:
-        - {type: Value, value: 'true'}
-  - type: File
-    attributes: {id: PORTS_HEADER}
-    children:
-    - type: Attributes
-      children:
-      - type: Boolean
-        attributes: {id: enabled}
-        children:
-        - {type: Value, value: 'true'}
-  - type: File
-    attributes: {id: PORTS_MAPPING}
-    children:
-    - type: Attributes
-      children:
-      - type: Boolean
-        attributes: {id: enabled}
-        children:
-        - {type: Value, value: 'true'}
-  - type: File
     attributes: {id: RESET_DEF}
     children:
     - type: Attributes
@@ -699,15 +651,6 @@ children:
         children:
         - {type: Value, value: 'true'}
   - type: File
-    attributes: {id: SYSTEM_MEDIA}
-    children:
-    - type: Attributes
-      children:
-      - type: Boolean
-        attributes: {id: enabled}
-        children:
-        - {type: Value, value: 'true'}
-  - type: File
     attributes: {id: SYSTEM_MODULE}
     children:
     - type: Attributes
@@ -718,33 +661,6 @@ children:
         - {type: Value, value: 'true'}
   - type: File
     attributes: {id: SYSTEM_ROOT}
-    children:
-    - type: Attributes
-      children:
-      - type: Boolean
-        attributes: {id: enabled}
-        children:
-        - {type: Value, value: 'true'}
-  - type: File
-    attributes: {id: SYS_CACHE_DEF}
-    children:
-    - type: Attributes
-      children:
-      - type: Boolean
-        attributes: {id: enabled}
-        children:
-        - {type: Value, value: 'true'}
-  - type: File
-    attributes: {id: SYS_CACHE_HEADER}
-    children:
-    - type: Attributes
-      children:
-      - type: Boolean
-        attributes: {id: enabled}
-        children:
-        - {type: Value, value: 'true'}
-  - type: File
-    attributes: {id: SYS_CACHE_SOURCE}
     children:
     - type: Attributes
       children:
