--- a/firmware/src/config/default/default.mhc/System_Configuration/TCP_IP_STACK/TRANSPORT_LAYER/tcpipTcp.yml
+++ b/firmware/src/config/default/default.mhc/System_Configuration/TCP_IP_STACK/TRANSPORT_LAYER/tcpipTcp.yml
@@ -10,6 +10,20 @@ children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: tcpipTcp, value: '11560'}
+        attributes: {id: tcpipTcp, value: '30520'}
+  - type: Integer
+    attributes: {id: TCPIP_TCP_SOCKET_DEFAULT_RX_SIZE}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: '1460'}
+  - type: Integer
+    attributes: {id: TCPIP_TCP_SOCKET_DEFAULT_TX_SIZE}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: '1460'}
 - type: ElementPosition
   attributes: {x: '20', y: '20', id: tcpipTcp}
