--- a/firmware/src/config/default/default.mhc/System_Configuration/uart1.yml
+++ b/firmware/src/config/default/default.mhc/System_Configuration/uart1.yml
@@ -96,6 +96,10 @@ children:
         attributes: {id: visible}
         children:
         - {type: Value, value: 'true'}
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: '2048'}
   - type: File
     attributes: {id: UART_SOURCE}
     children:
@@ -118,6 +122,8 @@ children:
       children:
       - type: Dynamic
         attributes: {id: sysWifiPic32mzw1, value: '2048'}
+      - type: User
+        attributes: {value: '4096'}
   - type: Hex
     attributes: {id: UMODE_VALUE}
     children:
