--- a/firmware/src/config/default/default.mhc/rtcc.yml
+++ b/firmware/src/config/default/default.mhc/rtcc.yml
@@ -16,12 +16,6 @@ children:
   - type: String
     attributes: {id: RTCALRM_DATE}
     children:
-    - type: Attributes
-      children:
-      - type: Boolean
-        attributes: {id: visible}
-        children:
-        - {type: Value, value: 'true'}
     - type: Values
       children:
       - type: User
@@ -29,25 +23,10 @@ children:
   - type: String
     attributes: {id: RTCALRM_TIME}
     children:
-    - type: Attributes
-      children:
-      - type: Boolean
-        attributes: {id: visible}
-        children:
-        - {type: Value, value: 'true'}
     - type: Values
       children:
       - type: User
         attributes: {value: '1'}
-  - type: KeyValueSet
-    attributes: {id: RTCC_ALARM_MASK}
-    children:
-    - type: Attributes
-      children:
-      - type: Boolean
-        attributes: {id: visible}
-        children:
-        - {type: Value, value: 'true'}
   - type: Boolean
     attributes: {id: RTCC_ALARM_REPEAT_FOREVER}
     children:
@@ -61,7 +40,7 @@ children:
     - type: Values
       children:
       - type: User
-        attributes: {value: '0'}
+        attributes: {value: '1'}
   - type: Boolean
     attributes: {id: RTCC_INTERRUPT_MODE}
     children:
@@ -72,12 +51,6 @@ children:
   - type: String
     attributes: {id: RTCTIME_DATE}
     children:
-    - type: Attributes
-      children:
-      - type: Boolean
-        attributes: {id: visible}
-        children:
-        - {type: Value, value: 'true'}
     - type: Values
       children:
       - type: User
@@ -85,38 +58,23 @@ children:
   - type: String
     attributes: {id: RTCTIME_TIME}
     children:
-    - type: Attributes
-      children:
-      - type: Boolean
-        attributes: {id: visible}
-        children:
-        - {type: Value, value: 'true'}
     - type: Values
       children:
       - type: User
         attributes: {value: '0'}
-  - type: Integer
-    attributes: {id: RTCTIME_WEEKDAY}
-    children:
-    - type: Attributes
-      children:
-      - type: Boolean
-        attributes: {id: visible}
-        children:
-        - {type: Value, value: 'true'}
   - type: Boolean
     attributes: {id: RTC_ALARM}
     children:
     - type: Values
       children:
       - type: User
-        attributes: {value: 'true'}
+        attributes: {value: 'false'}
   - type: Boolean
     attributes: {id: RTC_TIMEANDDATE}
     children:
     - type: Values
       children:
       - type: User
-        attributes: {value: 'true'}
+        attributes: {value: 'false'}
 - type: ElementPosition
   attributes: {x: '370', y: '600', id: rtcc}
